--- a/src/simple/CMakeLists.txt
+++ b/src/simple/CMakeLists.txt
@@ -13,3 +13,7 @@ endif(${SHARED})
 
 target_include_directories(simple PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+# tools
+target_link_libraries(simple PUBLIC tools)
+target_link_directories(simple PUBLIC ${LIBPATH})
+
