--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,7 +3,8 @@ project(tools)
 
 
 # 递归搜索所有的源文件
-file(GLOB_RECURSE SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
+file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
+# add_library(tools STATIC ${SRC})
 
 set(LIBRARY_OUTPUT_PATH ${LIBPATH})
 if(${STATIC})
