--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "type.h": "c"
+        "type.h": "c",
+        "tools.h": "c",
+        "hash.h": "c",
+        "map.h": "c"
     }
 }
