--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "hash.h": "c",
         "map.h": "c",
         "random": "c",
-        "sort.h": "c"
+        "sort.h": "c",
+        "math.h": "c"
     }
 }
