--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,13 @@
         "map.h": "c",
         "random": "c",
         "sort.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "array": "c",
+        "string_view": "c",
+        "initializer_list": "c",
+        "span": "c",
+        "utility": "c",
+        "simple_1.h": "c",
+        "link.h": "c"
     }
 }
