--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "map.h": "c",
         "random": "c",
         "sort.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "simple_1.h": "c"
     }
 }
