--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "sort.h": "c",
         "math.h": "c",
         "simple_1.h": "c",
-        "limits": "c"
+        "limits": "c",
+        "link.h": "c"
     }
 }
